# ffmpeg-demo

./: .gitignore  CMakeLists.txt  README.md
app/include/: audio_decode.h  audio_encode.h  audio_filter.h  audio_mix.h  common.h  demux_decode.h  test.h  video_decode.h  video_encode.h  video_filter.h  video_scale.h
app/src/: audio_decode.cpp  audio_encode.cpp  audio_filter.cpp  audio_mix.cpp  demux_decode.cpp  main.cpp  test.cpp  video_decode.cpp  video_encode.cpp  video_filter.cpp  video_scale.cpp
libs/ffmpeg/lib/: libavdevice.so.58.13.100  libavfilter.so.7.110.100  libavformat.so.58.76.100  libavutil.so.56.70.100  libpostproc.so.55.9.100  libswresample.so.3.9.100  libswscale.so.5.9.100
libs/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libpostproc.pc  libswscale.pc
libs/libx264/lib/pkgconfig/: x264.pc
